# Cicerone

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CICERONE_CONTEXT.md  CICERONE_PARALLEL_UI_TASK.md  CICERONE_PLAN.md  Criteri ReadinessMaturity.docx  Criteri_Readiness_Maturity.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.streamlit/: config.toml
cicerone/: desktop.py  main.py  version_check.py
cicerone/db/: connection.py  repository.py  schema.sql  seed.py
cicerone/desktop/: __init__.py  _html.py  launcher.py  paths.py  setup_knowledge.py
cicerone/llm/: _client.py  diagnostica.py  intervista.py  report.py
cicerone/mcda/: calcolo.py
cicerone/ui/: _mock.py  app.py  style.css
cicerone/ui/_pages/: _shared.py  diagnostica.py  intervista.py  onboarding.py  report.py  vincitore.py
cicerone/ui/pages/: _shared.py  diagnostica.py  intervista.py  onboarding.py  report.py  vincitore.py
docs/archive/: CICERONE_PARALLEL_UI_TASK.md  README.md
docs/superpowers/specs/: 2026-06-19-redesign-streamlit-saas-design.md
flet_ui/: BRIEF-FLET-UI.md
packaging/: README.md  build.sh  cicerone.spec  generate_icon.py  icon.icns
resources/: Criteri_Rediness_Maturity.md  MatriceDB.xlsx
tests/: conftest.py  test_intervista_parse.py  test_mcda.py  test_repository.py
