[project]
name = "cicerone"
version = "0.1.0"
description = "Agente AI conversazionale per AI Readiness/Maturity assessment di PMI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.1",
    "openpyxl>=3.1.5",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[project.scripts]
cicerone = "cicerone.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cicerone"]
