[project]
name = "cicerone"
version = "0.1.1"
description = "Agente AI conversazionale per AI Readiness/Maturity assessment di PMI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.1",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[project.scripts]
cicerone = "cicerone.desktop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cicerone"]

[dependency-groups]
packaging = [
    "pyinstaller>=6.21.0",
    "pywebview>=6.2.1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
